Create a 'ToDoList' Activity
- Java file added
- Necessary changes to some xml files for adding the new activity

--- a/Dreamy/app/src/main/AndroidManifest.xml
+++ b/Dreamy/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DreamForm" />
-        <activity android:name=".DreamForm" />
+        <activity android:name=".ToDoList" />
     </application>
 
 </manifest>
