--- a/Dreamy/app/src/main/AndroidManifest.xml
+++ b/Dreamy/app/src/main/AndroidManifest.xml
@@ -33,6 +33,12 @@
 
         <activity android:name=".DreamyForm" />
         <activity android:name=".ToDoList" />
+        <activity
+            android:name=".Notes"
+            android:label="@string/app_name"/>
+        <activity
+            android:name=".FreeTime"
+            android:label="@string/app_name"/>
 
     </application>
 
