--- a/Dreamy/app/src/main/AndroidManifest.xml
+++ b/Dreamy/app/src/main/AndroidManifest.xml
@@ -18,19 +18,28 @@
         </activity>
 
         <activity
+            android:name=".logIn"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
             android:name=".Main"
             android:label="@string/app_name" >
         </activity>
+
         <activity
             android:name=".Front"
             android:label="@string/title_activity_front" >
         </activity>
 
         <activity android:name=".DreamyForm" />
+
         <activity android:name=".ToDoList" />
+
         <activity
             android:name=".Notes"
             android:label="@string/app_name"/>
+
         <activity
             android:name=".FreeTime"
             android:label="@string/app_name"/>
