--- a/Dreamy/app/src/main/AndroidManifest.xml
+++ b/Dreamy/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         </activity>
 
         <activity
+            android:name=".signUp"
+            android:label="@string/app_name" >
+        </activity>
+
+
+        <activity
             android:name=".Main"
             android:label="@string/app_name" >
         </activity>
